NEW: Add DamageModifier interface and implementation