@@ -16,74 +16,134 @@ public class CharacterMatchResolverTest extends TestCase {
   public void testResolveMatchWithDamages() {
     // Setup context
     Card c1 = new Card();
-    int att1 = 4;
-    Integer life1 = 12;
-    int score1 = 18;
-    c1.setIntSetting("ATT", att1);
-    c1.setIntSetting("LIFE", life1);
+    c1.setIntSetting("ATT", 4);
+    c1.setIntSetting("LIFE", 12);
     Player p1 = new Player();
-    p1.setScore(score1);
+    p1.setScore(18);
 
     Card c2 = new Card();
-    int def2 = 2;
-    int life2 = 21;
-    int score2 = 81;
-    c2.setIntSetting("DEF", def2);
-    c2.setIntSetting("LIFE", life2);
+    c2.setIntSetting("DEF", 2);
+    c2.setIntSetting("LIFE", 21);
     Player p2 = new Player();
-    p2.setScore(score2);
+    p2.setScore(81);
 
     List<CardEffectLog> effectDescriptions = new ArrayList<CardEffectLog>();
     characterMatchResolver.resolveCharacterMatch(c1, p1, c2, effectDescriptions);
 
-    assertEquals(c2.getIntSetting("LIFE").getMax(), c2.getIntSetting("LIFE").getMin());
-    assertEquals(new Integer(life2 - (att1 - def2)), c2.getIntSetting("LIFE").getMin());
-    assertEquals(c1.getIntSetting("LIFE").getMax(), c1.getIntSetting("LIFE").getMin());
-    assertEquals(life1, c1.getIntSetting("LIFE").getMin());
-    assertEquals(score1 + (att1 - def2), p1.getScore());
-    assertEquals(score2, p2.getScore());
+    assertEquals(Integer.valueOf(19), c2.getIntSetting("LIFE").getMin()); // 21- (4-2)
+    assertEquals(Integer.valueOf(12), c1.getIntSetting("LIFE").getMin());
+    assertEquals(20, p1.getScore()); // 18 + (4-2)
+    assertEquals(81, p2.getScore());
 
     // check description of effects has been added
     assertEquals(1, effectDescriptions.size());
     assertEquals(1, effectDescriptions.get(0).getSettingChanges().size());
     SettingChange settingChange = effectDescriptions.get(0).getSettingChanges().get(0);
     assertEquals("LIFE", settingChange.getSetting());
-    assertEquals(Integer.toString(life2 - (att1 - def2)), settingChange.getNewValue());
-    assertEquals("-" + (att1 - def2), settingChange.getDiff());
+    assertEquals("19", settingChange.getNewValue());
+    assertEquals("-2", settingChange.getDiff());
     assertEquals(c2.getId(), settingChange.getCharacterId());
   }
 
   public void testResolveMatchNoDamages() {
     // Setup context
     Card c1 = new Card();
-    int att1 = 1;
-    int life1 = 12;
-    int score1 = 18;
-    c1.setIntSetting("ATT", att1);
-    c1.setIntSetting("LIFE", life1);
+    c1.setIntSetting("ATT", 1);
+    c1.setIntSetting("LIFE", 12);
     Player p1 = new Player();
-    p1.setScore(score1);
+    p1.setScore(18);
 
     Card c2 = new Card();
-    int def2 = 2;
-    Integer life2 = 21;
-    c2.setIntSetting("DEF", def2);
-    c2.setIntSetting("LIFE", life2);
+    c2.setIntSetting("DEF", 2);
+    c2.setIntSetting("LIFE", 21);
 
     List<CardEffectLog> effectDescriptions = new ArrayList<CardEffectLog>();
     characterMatchResolver.resolveCharacterMatch(c1, p1, c2, effectDescriptions);
 
     assertEquals(c2.getIntSetting("LIFE").getMax(), c2.getIntSetting("LIFE").getMin());
-    assertEquals(life2, c2.getIntSetting("LIFE").getMin());
-    assertEquals(score1, p1.getScore());
+    assertEquals(Integer.valueOf(21), c2.getIntSetting("LIFE").getMin());
+    assertEquals(18, p1.getScore());
 
     // check description of effects has been added
     assertEquals(1, effectDescriptions.size());
     assertEquals(1, effectDescriptions.get(0).getSettingChanges().size());
     SettingChange settingChange = effectDescriptions.get(0).getSettingChanges().get(0);
     assertEquals("LIFE", settingChange.getSetting());
-    assertEquals(Integer.toString(life2), settingChange.getNewValue());
+    assertEquals("21", settingChange.getNewValue());
     assertEquals("0", settingChange.getDiff());
+    assertEquals(c2.getId(), settingChange.getCharacterId());
+  }
+
+  public void testResolveMatchWithDamages_DamageModifier() {
+    // Setup context
+    Card c1 = new Card();
+    c1.setIntSetting("ATT", 4);
+    c1.setIntSetting("LIFE", 12);
+    Player p1 = new Player();
+    p1.setScore(18);
+
+    Card c2 = new Card();
+    c2.setIntSetting("DEF", 2);
+    c2.setIntSetting("LIFE", 21);
+    c2.registerDamageModifier(new MockDamageModifier(-1));
+    Player p2 = new Player();
+    p2.setScore(81);
+
+    List<CardEffectLog> effectDescriptions = new ArrayList<CardEffectLog>();
+    characterMatchResolver.resolveCharacterMatch(c1, p1, c2, effectDescriptions);
+
+    assertEquals(Integer.valueOf(20), c2.getIntSetting("LIFE").getMin()); // 21- (4-2) +1
+    assertEquals(19, p1.getScore()); // 18 + (4-2) -1
+
+    // check description of effects has been added
+    assertEquals(1, effectDescriptions.size());
+    assertEquals(2, effectDescriptions.get(0).getSettingChanges().size());
+    SettingChange settingChange = effectDescriptions.get(0).getSettingChanges().get(0);
+    assertEquals("LIFE", settingChange.getSetting());
+    assertEquals("19", settingChange.getNewValue());
+    assertEquals("-2", settingChange.getDiff());
+    assertEquals(c2.getId(), settingChange.getCharacterId());
+
+    settingChange = effectDescriptions.get(0).getSettingChanges().get(1);
+    assertEquals("LIFE", settingChange.getSetting());
+    assertEquals("20", settingChange.getNewValue());
+    assertEquals("+1", settingChange.getDiff());
+    assertEquals(c2.getId(), settingChange.getCharacterId());
+  }
+
+  public void testResolveMatchWithNoDamages_DamageModifier() {
+    // Setup context
+    Card c1 = new Card();
+    c1.setIntSetting("ATT", 1);
+    c1.setIntSetting("LIFE", 12);
+    Player p1 = new Player();
+    p1.setScore(18);
+
+    Card c2 = new Card();
+    c2.setIntSetting("DEF", 2);
+    c2.setIntSetting("LIFE", 21);
+    c2.registerDamageModifier(new MockDamageModifier(-1));
+
+    List<CardEffectLog> effectDescriptions = new ArrayList<CardEffectLog>();
+    characterMatchResolver.resolveCharacterMatch(c1, p1, c2, effectDescriptions);
+
+    assertEquals(c2.getIntSetting("LIFE").getMax(), c2.getIntSetting("LIFE").getMin());
+    assertEquals(Integer.valueOf(21), c2.getIntSetting("LIFE").getMin());
+    assertEquals(18, p1.getScore());
+
+    // check description of effects has been added
+    assertEquals(1, effectDescriptions.size());
+    assertEquals(2, effectDescriptions.get(0).getSettingChanges().size());
+    SettingChange settingChange = effectDescriptions.get(0).getSettingChanges().get(0);
+    assertEquals("LIFE", settingChange.getSetting());
+    assertEquals("21", settingChange.getNewValue());
+    assertEquals("0", settingChange.getDiff());
+    assertEquals(c2.getId(), settingChange.getCharacterId());
+
+    settingChange = effectDescriptions.get(0).getSettingChanges().get(1);
+    assertEquals("LIFE", settingChange.getSetting());
+    assertEquals("21", settingChange.getNewValue());
+    assertEquals("+0", settingChange.getDiff());
     assertEquals(c2.getId(), settingChange.getCharacterId());
   }
 }
